--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Anything</title>
   </head>
   <body>
-      Syntax Error
+      Syntax Error is better than Error 404 
   </body>
 </html>
