--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>This is the right thing</title>
   </head>
   <body>
-      Syntax Error
+
+      Error 403 forbidden
+
   </body>
 </html>
