--- a/mdl-template-dashboard/website.html
+++ b/mdl-template-dashboard/website.html
@@ -94,7 +94,7 @@
         </nav>
       </div>
       <main class="mdl-layout__content mdl-color--grey-100">
-        <img src ="https://amp.businessinsider.com/images/59f0bc253e9d2514048b4d6c-750-563.jpg" class =>
+        <img src ="https://amp.businessinsider.com/images/59f0bc253e9d2514048b4d6c-750-563.jpg" style = "width="750" height="600"">
       </main>
     </div>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
