--- a/Autocomplete.html
+++ b/Autocomplete.html
@@ -75,7 +75,7 @@ input[type=submit] {
 <!--Make sure the form has the autocomplete function switched off:-->
 <form autocomplete="off" action="/action_page.php">
   <div class="autocomplete" style="width:300px;">
-    <input id="myInput" type="text" name="myCountry" placeholder="Location">
+    <input id="myInput" type="text" name="myCountry" placeholder="Search For Location!">
   </div>
   <input type="submit">
 </form>
